# ece461-sp2023-backend

./: .gitignore  Cargo.toml  Makefile  README.md  call_decode.py  coverage.sh  decode_and_rate.py  deps.dot  log  metrics.ndjson  run  runmain.sh  test.sh
.github/workflows/: lint.yml  test.yaml
hooks/: pre-commit
src/: lib.rs  log.rs  main.rs
src/api/: mod.rs
src/api/fetch/: mod.rs  url_conversion.rs
src/api/graphql/: license.graphql  mod.rs  queries.graphql  test.graphql
src/app/web_interface/: .gitignore  pubspec.yaml
src/app/web_interface/lib/: data.dart  database_table.dart  firebase_options.dart  home.dart  login.dart  main.dart  popup.dart  wavy_bg.dart
src/app/web_interface/linux/: CMakeLists.txt  my_application.cc
src/cli/: mod.rs
src/controller/: bus_factor.rs  correctness.rs  count_commits.rs  license_compatibility.rs  metrics.rs  mod.rs  ramp_up_time.rs  responsiveness.rs  scores.rs  tests.rs
src/controller/bus_factor/: mod.rs  tests.rs
src/controller/correctness/: mod.rs  tests.rs
src/controller/fraction_dependencies/: fracDep.py  frac_dep.py  mod.rs  tests.rs
src/controller/fraction_reviewed/: mod.rs  tests.rs
src/controller/license_compatibility/: licenses.json  mod.rs  tests.rs
src/controller/responsiveness/: mod.rs  tests.rs
src/input/: mod.rs
src/input/cli/: mod.rs  tests.rs
src/output/: console_output_sorted.rs  mod.rs  tests.rs
tests/: input-urls
tests/multiple_commits_repo/: ipsum
tests/multiple_commits_repo/git/: COMMIT_EDITMSG  config  index
tests/python_linter/: python_linter_test.py
tests/single_commit_repo/: ipsum
tests/single_commit_repo/git/: COMMIT_EDITMSG  ORIG_HEAD  index
(+20 files in other folders)
