[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql_client = { version = "0.12.0", features = ["reqwest"] }
git2 = "0.16.1"
reqwest = { version = "^0.11", features = ["brotli", "json", "trust-dns"] }
serde = "^1.0"
tokio = { version = "1", features = ["full"] }
url = "2.3.1"
serde_json = "1.0.91"
dirs = "4.0.0"
thiserror = "1.0.38"
