[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
dirs = "4"
futures = "0.3"
git2 = "0.16.1"
graphql_client = { version = "0.12.0", features = ["reqwest"] }
lazy_static = "1.4.0"
reqwest = { version = "^0.11", features = ["brotli", "json", "trust-dns"] }
serde = "^1.0"
serde_json = "1.0.91"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
url = "2.3.1"

[profile.dev.package."*"]
opt-level = 3
